--- a/latex-algs/hw3/hw3.tex
+++ b/latex-algs/hw3/hw3.tex
@@ -89,7 +89,7 @@ activities have been sorted such that \(S[1] \leq S[2] \leq ... \leq S[n]\).
     \end{center}    
 \end{enumerate}
 
-\encircle{2(A)} 
+\textbf{Part A.}
 
 \begin{algorithm}[H]
     \caption{
@@ -101,7 +101,7 @@ activities have been sorted such that \(S[1] \leq S[2] \leq ... \leq S[n]\).
         \Function{MaxActivities}{S[1..n], F[1..n]}
             \State $ M \gets P \gets \emptyset $        
             \State $ \Call{Initialize}{M, P} $            
-            
+            \\
             \For{i from 1 to n}   \Comment{Locate max for \(m_i\)}
                 \State $ max \gets M[i] $                
                 \For{j from 1 to i}
@@ -111,19 +111,36 @@ activities have been sorted such that \(S[1] \leq S[2] \leq ... \leq S[n]\).
                     \EndIf
                 \EndFor
             \EndFor
-            
+            \\
             \State $ max \gets 1 $ \Comment{Find global maximum}                        
             \For{i from 2 to n}      
                 \If{M[max] < M[i]}
                     \State $ max \gets i $                    
                 \EndIf
             \EndFor
-
-            \State $ \Return \text{ max, P}$
-
+            \\
+            \State $ \Return \text{ (max, P)}$
+            
         \EndFunction
     \end{algorithmic}
 \end{algorithm}
+
+With this algorithm in mind, the answer is as follows:
+\begin{flalign*}
+    \textbf{ Inductive Formula: } \{ m(i) &= \max_{1 \leq j \leq i}(m_j) + 1 \mid F[j] < S[i] \} &\\
+    \textbf{Initial Conditions: } m(1) &= 1 &\\    
+\end{flalign*}
+
+The \textbf{subproblem} can be thought of as follows. Each activity, \(i\),
+will be added to a chain of activities resulting in the maximum set that
+includes activity \(i\). Activity \(i\) is always included in its maximum.
+Its maximum, \(m_i\), must also be based off of previous activities which
+are compatible.
+\\
+
+
+
+\textbf{Part B.}
 
 
 
