--- a/latex-algs/hw3/hw3.tex
+++ b/latex-algs/hw3/hw3.tex
@@ -89,7 +89,8 @@ activities have been sorted such that \(S[1] \leq S[2] \leq ... \leq S[n]\).
     \end{center}    
 \end{enumerate}
 
-\textbf{Part A.}
+\pagebreak
+\textbf{2.A}
 
 \begin{algorithm}[H]
     \caption{
@@ -102,14 +103,17 @@ activities have been sorted such that \(S[1] \leq S[2] \leq ... \leq S[n]\).
             \State $ M \gets P \gets \emptyset $        
             \State $ \Call{Initialize}{M, P} $            
             \\
-            \For{i from 1 to n}   \Comment{Locate max for \(m_i\)}
-                \State $ max \gets M[i] $                
+            \State $ M[1] \gets 1 $
+            \State $ P[1] \gets 0 $
+            \For{i from 2 to n}   \Comment{Locate max for \(m_i\)}                
+                \State $ max \gets 1 $                
                 \For{j from 1 to i}
                     \If{max < M[j] and F[j] < S[i]}
                         \State $ max \gets M[j] $
                         \State $ P[i] \gets j $
                     \EndIf
-                \EndFor
+                \EndFor               
+                \State $ M[i] \gets max $ 
             \EndFor
             \\
             \State $ max \gets 1 $ \Comment{Find global maximum}                        
@@ -138,11 +142,31 @@ Its maximum, \(m_i\), must also be based off of previous activities which
 are compatible.
 \\
 
+\pagebreak
 
+\textbf{2.B}\\
 
-\textbf{Part B.}
+\textit{After Initialization.}
+\begin{center}
+    \begin{tabular}{ | l | c | c | c | c | c | c | c | c | c | c | r |}
+        \hline
+            i & 1 & 2 & 3 & 4 & 5 & 6 & 7 & 8 & 9 & 10 & 11 \\ \hline
+            M[i] & 1 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 \\ \hline
+            P[i] & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 \\
+        \hline
+    \end{tabular}
+\end{center}
 
-
+\textit{Upon Completion.}
+\begin{center}
+    \begin{tabular}{ | l | c | c | c | c | c | c | c | c | c | c | r |}
+        \hline
+            i & 1 & 2 & 3 & 4 & 5 & 6 & 7 & 8 & 9 & 10 & 11 \\ \hline
+            M[i] & 1 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 \\ \hline
+            P[i] & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 \\
+        \hline
+    \end{tabular}
+\end{center}    
 
 
 \end{document}
