--- a/latex-algs/hw3/hw3.tex
+++ b/latex-algs/hw3/hw3.tex
@@ -106,14 +106,16 @@ activities have been sorted such that \(S[1] \leq S[2] \leq ... \leq S[n]\).
             \State $ M[1] \gets 1 $
             \State $ P[1] \gets 0 $
             \For{i from 2 to n}   \Comment{Locate max for \(m_i\)}                
-                \State $ max \gets 1 $                
-                \For{j from 1 to i}
-                    \If{max < M[j] and F[j] < S[i]}
+                \State $ max \gets 0 $
+                \State $ maxIdx \gets 0 $                
+                \For{j from 1 to i - 1}
+                    \If{max < M[j] and F[j] \(\leq\) S[i]}
                         \State $ max \gets M[j] $
-                        \State $ P[i] \gets j $
+                        \State $ maxIdx \gets j $
                     \EndIf
                 \EndFor               
-                \State $ M[i] \gets max $ 
+                \State $ M[i] \gets max + 1$ 
+                \State $ P[i] \gets maxIdx $
             \EndFor
             \\
             \State $ max \gets 1 $ \Comment{Find global maximum}                        
@@ -146,7 +148,7 @@ are compatible.
 
 \textbf{2.B}\\
 
-\textit{After Initialization.}
+\textit{After Initialization of M and P.}
 \begin{center}
     \begin{tabular}{ | l | c | c | c | c | c | c | c | c | c | c | r |}
         \hline
@@ -156,17 +158,26 @@ are compatible.
         \hline
     \end{tabular}
 \end{center}
+\text{}\\
 
-\textit{Upon Completion.}
+\textit{Upon Algorithm Completion.}
 \begin{center}
     \begin{tabular}{ | l | c | c | c | c | c | c | c | c | c | c | r |}
         \hline
             i & 1 & 2 & 3 & 4 & 5 & 6 & 7 & 8 & 9 & 10 & 11 \\ \hline
-            M[i] & 1 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 \\ \hline
-            P[i] & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 \\
+            M[i] & 1 & 1 & 2 & 2 & 3 & 4 & 4 & 4 & 5 & 6 & 6 \\ \hline
+            P[i] & 0 & 0 & 2 & 1 & 3 & 5 & 5 & 5 & 6 & 9 & 9 \\
         \hline
     \end{tabular}
 \end{center}    
 
+\pagebreak
+
+\encircle{3}
+
+
+
+
+\textbf{}
 
 \end{document}
